--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,11 +1,11 @@
 [
     {
       "title": "Prop Firm",
-      "imageSrc": "projects/project.png",
-      "description": "My first project, inspired in trading prop firms like FTMO and MFF.",
+      "imageSrc": "projects/one-funded.png",
+      "description": "My first project, inspired in trading prop firms like FTMO and others.",
       "skills": ["HTML", "CSS", "JavaScript"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "demo": "https://lucky-puppy-193e6f.netlify.app/",
+      "source": "https://github.com/geodm20/Prop-Firm"
     },
     {
       "title": "Project B",
